--- a/src/assets/scss/components/_custom-button.scss
+++ b/src/assets/scss/components/_custom-button.scss
@@ -2,6 +2,8 @@
 
 .btn {
   display: inline-flex;
+  justify-content: center;
+  align-items: center;
   font-size: 20px;
   color: $pureWhite;
   background-color: $orange;
