responsive design added to header section

--- a/src/assets/scss/components/_header.scss
+++ b/src/assets/scss/components/_header.scss
@@ -2,7 +2,6 @@
 
 .header {
   width: 100%;
-  //margin-top: 30px;
   position: fixed;
   top: 30px;
   z-index: 1000;
@@ -16,9 +15,7 @@
         justify-content: space-between;
         gap: 60px;
         width: 550px;
-        background-color:$black;
-
-        //height: 50px;
+        background-color: $black;
         padding: 6px 8px 6px 22px;
         border-radius: 10px;
         .logo {
@@ -47,7 +44,6 @@
         .lets-work {
           display: flex;
           align-items: center;
-
           padding: 10px 24px;
           border-radius: 8px;
           background: $darkGray;
@@ -83,6 +79,171 @@
             font-size: 23px;
             cursor: pointer;
             transition: transform 0.3s ease;
+          }
+        }
+      }
+    }
+    .menu-panel {
+      display: none;
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  .header {
+    top: 8px;
+    .container {
+      .row {
+        display: none;
+      }
+      .menu-panel {
+        position: relative;
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        gap: 15px;
+        background-color: $black;
+        padding: 4px 8px 4px 8px;
+        border-radius: 8px;
+        z-index: 600;
+        .logo {
+          width: 90px;
+          display: flex;
+          
+          a {
+            color: $pureWhite;
+            svg{
+              width: 90px;
+              max-width: 82px;
+            }
+          }
+        }
+        .right-side {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          height: 100%;
+          .cart-btn {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 30px;
+            height: 30px;
+            background-color: $black;
+            border: none;
+            cursor: pointer;
+            &:hover .cart {
+              transform: scale(1.2);
+            }
+            .cart {
+              display: inline-block;
+              margin-top: -4px;
+              font-size: 20px;
+              cursor: pointer;
+              transition: transform 0.3s ease;
+            }
+          }
+        }
+      }
+      .mobile-menu {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100vw;
+        height: 100dvh;
+        z-index: 500;
+        padding: 15px;
+        display: flex;
+        flex-direction: column;
+        gap: 36px;
+        justify-content: flex-end;
+        background-color: $black;
+        color: $white;
+        overflow-y: scroll;
+        .nav-bar {
+          padding-top: 73px;
+          display: flex;
+          flex-direction: column;
+          gap: 18px;
+          .nav-list {
+            display: flex;
+            flex-direction: column;
+            gap: 18px;
+            .nav-item {
+              a {
+                color: $white;
+                font-size: 30px;
+                line-height: 32px;
+                letter-spacing: -1.5px;
+                &:hover {
+                  text-decoration: underline;
+                }
+              }
+              &.lets-work {
+                display: flex;
+                align-items: center;
+                gap: 15px;
+                .lets-work-svg {
+                  padding: 11px;
+                  background-color: $orange;
+                  border-radius: 9999px;
+                  height: 34px;
+                  width: 34px;
+                  display: inline-flex;
+                  justify-content: center;
+                  align-items: center;
+                  cursor: pointer;
+                  .arrow-right {
+                    width: 18px;
+                  }
+                }
+              }
+            }
+          }
+        }
+        .social-links {
+          display: flex;
+          flex-direction: column;
+          gap: 22px;
+          .list {
+            display: flex;
+            flex-direction: column;
+            gap: 4px;
+            .item {
+              display: flex;
+              flex-direction: column;
+              gap: 7px;
+              .link-title {
+                font-size: 14px;
+                color: $lightGray;
+                line-height: 18px;
+                letter-spacing: -0.4px;
+              }
+              a {
+                color: $white;
+                text-decoration: underline;
+                font-size: 19px;
+                line-height: 22px;
+                letter-spacing: -0.5px;
+                &:hover {
+                  color: $lightGray;
+                }
+              }
+              .flex {
+                display: flex;
+                gap: 15px;
+              }
+            }
+          }
+        }
+        .bottom{
+          color: $lightGray;
+          .text{
+            font-size: 13px;
+            text-align: center;
+            line-height: 15px;
+            letter-spacing: -0.3px;
           }
         }
       }
