--- a/src/assets/scss/pages/_shop-details.scss
+++ b/src/assets/scss/pages/_shop-details.scss
@@ -126,7 +126,14 @@
         scrollbar-width: none;
         order: 9999;
         img {
+          width: 100%;
           border-radius: 14px;
+          aspect-ratio: 16/9;
+          object-fit: cover;
+          &.detail-img {
+            width: 100%;
+            //object-position: center 30%;
+          }
         }
       }
     }
@@ -286,7 +293,7 @@
 }
 
 @media (max-width: 768px) {
-   .shop-details {
+  .shop-details {
     padding-top: 103px;
     .container {
       .row {
@@ -327,7 +334,7 @@
               }
             }
           }
-          .add-btn{
+          .add-btn {
             font-size: 16px;
           }
         }
@@ -342,7 +349,7 @@
 }
 
 @media (max-width: 480px) {
-   .shop-details {
+  .shop-details {
     padding-top: 112px;
     .container {
       .row {
@@ -374,7 +381,7 @@
             }
             .timeline {
               gap: 8px;
-              .timeline-svg{
+              .timeline-svg {
                 width: 17px;
               }
               .time {
@@ -386,10 +393,10 @@
           }
           .advantages {
             gap: 16px;
-            .advantage {    
+            .advantage {
               line-height: 20px;
               gap: 8px;
-               img {
+              img {
                 width: 40px;
                 height: 40px;
               }
@@ -400,7 +407,6 @@
           gap: 16px;
           padding-left: 0px;
           padding-right: 0px;
-         
         }
       }
     }
