--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -5,6 +5,7 @@
 @use"./components/header";
 @use"./components/footer";
 @use"./components/custom-button";
+@use"./components/custom-contact";
 @use"./components/loading";
 
 //pages
