--- a/src/assets/scss/pages/_featured-work.scss
+++ b/src/assets/scss/pages/_featured-work.scss
@@ -2,7 +2,7 @@
 
 .featured-work {
   width: 100%;
-  //padding-bottom: 65px;
+  overflow: hidden;
   .container {
     .row {
       flex-direction: column;
