--- a/src/assets/scss/components/_custom-contact.scss
+++ b/src/assets/scss/components/_custom-contact.scss
@@ -1,2 +1,568 @@
 @use "../variables" as *;
 
+.custom-contact {
+  position: relative;
+  z-index: 9999;
+  visibility: hidden;
+  opacity: 0;
+  transition: opacity 0.4s ease, visibility 0.4s ease;
+
+  &.active {
+    visibility: visible;
+    opacity: 1;
+  }
+
+  .contact-form,
+  .contact-info,
+  .close-button {
+    transform-origin: top left;
+    transform: scale(0);
+    transition: transform 0.5s ease, opacity 0.5s ease;
+  }
+
+  &.active {
+    .contact-form {
+      transform: scale(1);
+      transition-delay: 0.3s;
+    }
+
+    .contact-info {
+      transform: scale(1);
+      transition-delay: 0.9s;
+    }
+
+    .close-button {
+      transform: scale(1);
+      transition-delay: 1.2s;
+    }
+  }
+
+  .fixed {
+    position: fixed;
+    inset: 0;
+    display: flex;
+    align-items: flex-start;
+    width: 100vw;
+    height: 100vh;
+    .overlay {
+      position: absolute;
+      inset: 0;
+      z-index: 0;
+      background-color: #100f1480;
+    }
+    .contact {
+      width: 100%;
+      padding: 36px;
+      height: 100dvh;
+      z-index: 10;
+      overflow-y: scroll;
+      .grid {
+        width: 100%;
+        display: grid;
+        grid-template-columns: 2fr 1fr;
+        gap: 18px;
+        .contact-form {
+          background-color: $pureWhite;
+          border-radius: 27px;
+          padding: 30px 72px;
+          height: calc(100dvh - 72px);
+          overflow-y: scroll;
+          scrollbar-width: none;
+          transform-origin: top left;
+          .row {
+            display: flex;
+            flex-direction: column;
+            gap: 27px;
+            .contact-title {
+              display: flex;
+              flex-direction: column;
+              gap: 9px;
+              .title {
+                font-size: 54px;
+                line-height: 1;
+                letter-spacing: -1.6px;
+              }
+            }
+            .form {
+              display: flex;
+              flex-direction: column;
+              gap: 27px;
+              padding-bottom: 40px;
+              .form-input {
+                display: grid;
+                grid-template-columns: repeat(2, minmax(0, 1fr));
+                gap: 18px;
+              }
+              fieldset {
+                textarea {
+                  width: 100%;
+                  min-height: 216px;
+                }
+              }
+            }
+          }
+        }
+        .contact-info {
+          background-color: $pureWhite;
+          padding: 45px;
+          border-radius: 27px;
+          display: flex;
+          flex-direction: column;
+          gap: 36px;
+          align-self: flex-end;
+          transform-origin: top left;
+          overflow-y: auto;
+          .contact-info-top {
+            color: $black;
+            display: flex;
+            flex-direction: column;
+            gap: 9px;
+            max-width: 360px;
+            .contact-svg {
+              width: 27px;
+              height: 27px;
+            }
+            .title {
+              font-size: 23px;
+              font-weight: 400;
+              line-height: 27px;
+              letter-spacing: -1.1px;
+              text-transform: uppercase;
+              font-family: stroy;
+              margin-bottom: 18px;
+            }
+            .contact-text {
+              opacity: 0.6;
+              line-height: 23px;
+              letter-spacing: -0.5px;
+            }
+          }
+          .contact-list {
+            display: flex;
+            flex-direction: column;
+            gap: 18px;
+            color: $black;
+            .list-item {
+              display: flex;
+              align-items: center;
+              gap: 18px;
+              img {
+                width: 36px;
+                height: 36px;
+              }
+              .list-info {
+                display: flex;
+                flex-direction: column;
+                .list-title {
+                  font-size: 18px;
+                  letter-spacing: -0.9px;
+                  text-transform: uppercase;
+                  font-family: stroy;
+                }
+                .list-name {
+                  opacity: 0.6;
+                  text-transform: uppercase;
+                  font-family: stroy;
+                  line-height: 23px;
+                  letter-spacing: -0.8px;
+                }
+              }
+            }
+          }
+          .contact-info-bottom {
+            display: flex;
+            flex-direction: column;
+            gap: 9px;
+            .contact-info-bottom-title {
+              color: $black;
+              font-family: stroy;
+              text-transform: uppercase;
+              line-height: 23px;
+              letter-spacing: -0.8px;
+              opacity: 0.6;
+            }
+            .contact-info-bottom-links {
+              display: flex;
+              align-items: center;
+              gap: 18px;
+              a {
+                color: $black;
+                font-size: 17px;
+                font-weight: 600;
+              }
+            }
+          }
+        }
+        .close-button {
+          display: flex;
+          justify-content: flex-end;
+          position: absolute;
+          top: 27px;
+          right: 27px;
+          .close-btn {
+            color: $pink;
+            text-transform: uppercase;
+            letter-spacing: -0.9px;
+            font-family: stroy;
+            font-size: 18px;
+            svg {
+              width: 23px;
+              height: 23px;
+              margin-top: -2px;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 1200px) {
+  .custom-contact {
+    .fixed {
+      .contact {
+        padding: 31px;
+        .grid {
+          gap: 15px;
+          .contact-form {
+            border-radius: 23px;
+            padding: 62px;
+            height: calc(100dvh - 62px);
+            .row {
+              gap: 23px;
+              .contact-title {
+                gap: 8px;
+                .title {
+                  font-size: 46px;
+                  letter-spacing: -1.4px;
+                }
+              }
+              .form {
+                gap: 23px;
+                .form-input {
+                  gap: 15px;
+                }
+                fieldset {
+                  textarea {
+                    width: 100%;
+                    min-height: 186px;
+                  }
+                }
+              }
+            }
+          }
+          .contact-info {
+            padding: 38px;
+            border-radius: 23px;
+            gap: 31px;
+            .contact-info-top {
+              gap: 8px;
+              max-width: 310px;
+              .contact-svg {
+                width: 23px;
+                height: 23px;
+              }
+              .title {
+                font-size: 19px;
+                line-height: 23px;
+                letter-spacing: -1px;
+                margin-bottom: 15px;
+              }
+              .contact-text {
+                font-size: 14px;
+                line-height: 18px;
+                letter-spacing: -0.4px;
+              }
+            }
+            .contact-list {
+              gap: 15px;
+              .list-item {
+                gap: 15px;
+                img {
+                  width: 31px;
+                  height: 31px;
+                }
+                .list-info {
+                  .list-title {
+                    font-size: 15px;
+                    letter-spacing: -0.7px;
+                  }
+                  .list-name {
+                    font-size: 14px;
+                    line-height: 19px;
+                    letter-spacing: -0.7px;
+                  }
+                }
+              }
+            }
+            .contact-info-bottom {
+              gap: 8px;
+              .contact-info-bottom-title {
+                font-size: 14px;
+                line-height: 19px;
+                letter-spacing: -0.7px;
+              }
+              .contact-info-bottom-links {
+                gap: 14px;
+                a {
+                  font-size: 15px;
+                }
+              }
+            }
+          }
+          .close-button {
+            top: 23px;
+            right: 23px;
+            .close-btn {
+              letter-spacing: -0.8px;
+              font-size: 15px;
+              padding: 8px 15px;
+              gap: 8px;
+              svg {
+                width: 21px;
+                height: 21px;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 1024px) {
+  .custom-contact {
+    .fixed {
+      .contact {
+        padding: 30px;
+        .grid {
+          gap: 15px;
+          .contact-form {
+            padding: 53px 30px;
+            height: calc(100dvh - 61px);
+            .row {
+              gap: 23px;
+              .contact-title {
+                gap: 8px;
+                .title {
+                  font-size: 45px;
+                  letter-spacing: -1.4px;
+                }
+              }
+              .form {
+                gap: 23px;
+                .form-input {
+                  gap: 15px;
+                }
+                fieldset {
+                  textarea {
+                    min-height: 182px;
+                  }
+                }
+              }
+            }
+          }
+          .contact-info {
+            padding: 37px;
+            border-radius: 23px;
+            gap: 30px;
+            .contact-info-top {
+              gap: 8px;
+              max-width: 303px;
+              .contact-svg {
+                width: 23px;
+                height: 23px;
+              }
+              .title {
+                font-size: 19px;
+                line-height: 23px;
+                letter-spacing: -0.9px;
+                margin-bottom: 15px;
+              }
+              .contact-text {
+                font-size: 13px;
+                line-height: 19px;
+                letter-spacing: -0.4px;
+              }
+            }
+            .contact-list {
+              gap: 15px;
+              .list-item {
+                gap: 15px;
+                img {
+                  width: 30px;
+                  height: 30px;
+                }
+                .list-info {
+                  .list-title {
+                    font-size: 15px;
+                    letter-spacing: -0.8px;
+                  }
+                  .list-name {
+                    font-size: 13px;
+                    line-height: 19px;
+                    letter-spacing: -0.7px;
+                  }
+                }
+              }
+            }
+            .contact-info-bottom {
+              gap: 8px;
+              .contact-info-bottom-title {
+                font-size: 13px;
+                line-height: 19px;
+                letter-spacing: -0.7px;
+              }
+              .contact-info-bottom-links {
+                flex-direction: column;
+                align-items: flex-start;
+                gap: 4px;
+                a {
+                  font-size: 15px;
+                }
+                .divider{
+                  display: none;
+                }
+              }
+            }
+          }
+          .close-button {
+            top: 23px;
+            right: 23px;
+            .close-btn {
+              letter-spacing: -0.8px;
+              font-size: 15px;
+              padding: 8px 15px;
+              gap: 8px;
+              svg {
+                width: 21px;
+                height: 21px;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 768px) {
+   .custom-contact {
+    .fixed {
+      .contact {
+        padding: 15px;
+        .grid {
+          grid-template-columns: 1fr;
+          gap: 15px;
+          .contact-form {
+            padding: 51px 29px;
+            height: calc(100dvh);
+            border-radius: 22px;
+            .row {
+              gap: 22px;
+              .contact-title {
+                gap: 7px;
+                .title {
+                  font-size: 44px;
+                  letter-spacing: -1.3px;
+                }
+              }
+              .form {
+                gap: 22px;
+                .form-input {
+                  grid-template-columns: repeat(1, minmax(0, 1fr));
+                  gap: 15px;
+                }
+                fieldset {
+                  textarea {
+                    min-height: 175px;
+                  }
+                }
+              }
+            }
+          }
+          .contact-info {
+            padding: 36px;
+            border-radius: 22px;
+            gap: 29px;
+            .contact-info-top {
+              gap: 7px;
+              max-width: 391px;
+              .contact-svg {
+                width: 22px;
+                height: 22px;
+              }
+              .title {
+                font-size: 22px;
+                line-height: 23px;
+                letter-spacing: -0.9px;
+                margin-bottom: 15px;
+              }
+              .contact-text {
+                font-size: 17px;
+                line-height: 19px;
+                letter-spacing: -0.4px;
+              }
+            }
+            .contact-list {
+              gap: 15px;
+              .list-item {
+                gap: 15px;
+                img {
+                  width: 30px;
+                  height: 30px;
+                }
+                .list-info {
+                  .list-title {
+                    font-size: 15px;
+                    letter-spacing: -0.8px;
+                  }
+                  .list-name {
+                    font-size: 13px;
+                    line-height: 19px;
+                    letter-spacing: -0.7px;
+                  }
+                }
+              }
+            }
+            .contact-info-bottom {
+              gap: 8px;
+              .contact-info-bottom-title {
+                font-size: 13px;
+                line-height: 19px;
+                letter-spacing: -0.7px;
+              }
+              .contact-info-bottom-links {
+                flex-direction: column;
+                align-items: flex-start;
+                gap: 4px;
+                a {
+                  font-size: 15px;
+                }
+                .divider{
+                  display: none;
+                }
+              }
+            }
+          }
+          .close-button {
+            top: 22px;
+            right: 22px;
+            .close-btn {
+              letter-spacing: -0.5px;
+              font-size: 14px;
+              padding: 7px 15px;
+              gap: 6px;
+              svg {
+                width: 20px;
+                height: 20px;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 480px) {}
