--- a/src/assets/scss/components/_header.scss
+++ b/src/assets/scss/components/_header.scss
@@ -62,6 +62,7 @@
         justify-content: center;
         height: 100%;
         .cart-btn {
+          position: relative;
           display: flex;
           align-items: center;
           justify-content: center;
@@ -80,6 +81,20 @@
             font-size: 23px;
             cursor: pointer;
             transition: transform 0.3s ease;
+          }
+          .count{
+            position: absolute;
+            top:-5px;
+            right: -5px;
+            width: 20px;
+            height: 20px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background-color: $orange;
+            border-radius: 9999px;
+            color: $white;
+            font-size: 14px;
           }
         }
       }
