added checkout form validation and successful page

--- a/src/assets/scss/pages/_cart.scss
+++ b/src/assets/scss/pages/_cart.scss
@@ -239,6 +239,10 @@
                 width: 100%;
                 min-height: 216px;
               }
+              .error-msg{
+                color: $orange;
+                font-size: 15px;
+              }
             }
           }
         }
