--- a/src/assets/scss/components/_header.scss
+++ b/src/assets/scss/components/_header.scss
@@ -31,10 +31,13 @@
             gap: 30px;
             align-items: center;
             .nav-item {
-              a {
+              .nav-link {
                 color: $lightGray;
                 font-size: 19px;
                 &:hover {
+                  color: $white;
+                }
+                &.active{
                   color: $white;
                 }
               }
