--- a/src/assets/scss/pages/_successful.scss
+++ b/src/assets/scss/pages/_successful.scss
@@ -1,45 +1,86 @@
 @use "../variables" as *;
 
-.success{
-    width: 100%;
-    padding-top: 162px;
-    color: $black;
-    .container{
-        .row{
-            display: grid;
-            grid-template-columns: repeat(2, minmax(0, 1fr));
-            align-items: center;
-            .right-side{
-                img{
-                    border-radius: 18px;
-                }
-            }
-            .left-side{
-                padding: 54px;
-                max-width: 756px;
-                display: flex;
-                flex-direction: column;
-                gap: 27px;
-                align-items: flex-start;
-                justify-self: center;
-                .title{
-                    font-size: 45px;
-                    line-height: 45px;
-                    letter-spacing: -2.2px;
-                }
-                div{
-                    display: flex;
-                    flex-direction: column;
-                    gap: 27px;
-                    align-items: flex-start;
-                    .text{
-                        font-size: 20px;
-                        letter-spacing: -0.6px;
-                        line-height: 1.7;
-                        opacity: .8;
-                    }
-                }
-            }
+.success {
+  width: 100%;
+  padding-top: 162px;
+  padding-bottom: 90px;
+  color: $black;
+  .container {
+    .row {
+      display: grid;
+      grid-template-columns: repeat(2, minmax(0, 1fr));
+      align-items: center;
+      .left-side {
+        img {
+          border-radius: 18px;
         }
+      }
+      .right-side {
+        padding: 54px;
+        max-width: 756px;
+        display: flex;
+        flex-direction: column;
+        gap: 27px;
+        align-items: flex-start;
+        justify-self: center;
+        .title {
+          font-size: 45px;
+          line-height: 45px;
+          letter-spacing: -2.2px;
+        }
+        div {
+          display: flex;
+          flex-direction: column;
+          gap: 27px;
+          align-items: flex-start;
+          .text {
+            font-size: 20px;
+            letter-spacing: -0.6px;
+            line-height: 1.7;
+            opacity: 0.8;
+          }
+        }
+      }
     }
+  }
+}
+
+@media (max-width: 1024px) {
+  .success {
+    padding-top: 136px;
+    padding-bottom: 50px;
+    .container {
+      .row {
+        display: grid;
+        grid-template-columns: repeat(1, minmax(0, 1fr));
+        align-items:flex-start;
+        gap: 30px;
+        .left-side {
+          img {
+            border-radius: 15px;
+          }
+        }
+        .right-side {
+          padding: 30px;
+          max-width: 635px;
+          gap: 22px;
+          align-items: flex-start;
+          justify-self:flex-start;
+          .title {
+            font-size: 38px;
+            line-height: 38px;
+            letter-spacing: -1px;
+          }
+          div {
+            gap: 38px;
+            .text {
+              font-size: 18px;
+              letter-spacing: -0.5px;
+              line-height: 1.3;
+            }
+          }
+        }
+      }
+    }
+  }
 }
