--- a/src/assets/scss/pages/_hero.scss
+++ b/src/assets/scss/pages/_hero.scss
@@ -5,12 +5,15 @@
   color: $black;
   width: 100%;
   min-height: 100vh;
-  //padding-top: 162px;
   padding-top: 192px;
   display: flex;
   align-items: center;
   flex-direction: column;
   .container {
+    // position: -webkit-sticky;
+    // position: sticky;
+    // top: 192px;
+    // z-index: 1;
     .row {
       display: flex;
       align-items: center;
@@ -42,7 +45,6 @@
             text-wrap: nowrap;
             cursor: pointer;
             &.creatives {
-              //position: relative;
               &:hover + .creative-images .image {
                 opacity: 1;
                 transform: translateY(0) scale(1);
@@ -181,7 +183,6 @@
       white-space: nowrap;
       .swiper-slide {
         width: auto !important;
-        //padding-right: 18px;
         .text {
           font-size: 18px;
           font-family: stroy;
@@ -198,6 +199,8 @@
     }
   }
   .video {
+    // position: relative;
+    // z-index: 2;
     border-top-left-radius: 27px;
     border-top-right-radius: 27px;
   }
